--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,18 @@
-Flask==2.3.3
-Werkzeug==2.3.7
-Jinja2==3.1.2
-itsdangerous==2.1.2
-MarkupSafe==2.1.3
+blinker==1.9.0
+certifi==2025.4.26
+charset-normalizer==3.4.2
+click==8.2.0
+dnspython==2.7.0
 email-validator==2.0.0.post2
-python-dotenv==1.0.0
+Flask==2.3.3
 gunicorn==20.1.0
+idna==3.10
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.3
+python-dotenv==1.0.0
+requests==2.32.3
+resend==2.10.0
+typing_extensions==4.13.2
+urllib3==2.4.0
+Werkzeug==2.3.7
